Fix scrolling in position detail dialog on mobile

--- a/apps/client/src/app/components/dialog-footer/dialog-footer.component.scss
+++ b/apps/client/src/app/components/dialog-footer/dialog-footer.component.scss
@@ -1,4 +1,7 @@
 :host {
   display: flex;
+  flex: 0 0 auto;
+  margin-bottom: 0;
   min-height: 0;
+  padding: 0;
 }
